--- a/.github/workflows/cijaivik.yaml
+++ b/.github/workflows/cijaivik.yaml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Show current directory and list files
+        run: |
+          pwd
+          ls -la
+
       - name: Set up Node.js env
         uses: actions/setup-node@v2
         with:
@@ -21,8 +26,6 @@ jobs:
         run: npm install
         working-directory: ./jaivikasgn2
 
-      # - name: Run tests
-      #   run: npm test
-
       - name: Build project
         run: npm run build
+        working-directory: ./jaivikasgn2
