--- a/.github/workflows/cijaivik.yaml
+++ b/.github/workflows/cijaivik.yaml
@@ -1,31 +1,34 @@
-name: Jaivik Work Flow
+  name: Jaivik Work Flow
 
-on:
-  push:
-    branches:
-      - main
+  on:
+    push:
+      branches:
+        - main
 
-jobs:
-  Build_Test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+  jobs:
+    Build_Test:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout repository
+          uses: actions/checkout@v2
 
-      - name: Show current directory and list files
-        run: |
+        - name: Show current directory and list files
+          run: |
           pwd
           ls -la
 
-      - name: Set up Node.js env
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
+        - name: Set up Node.js env
+          uses: actions/setup-node@v2
+          with:
+            node-version: '18'
 
-      - name: Install dependencies
-        run: npm install
-        working-directory: ./jaivikasgn2
+        - name: Install dependencies
+          run: npm install
+          working-directory: ./jaivikasgn2
 
-      - name: Build project
-        run: npm run build
-        working-directory: ./jaivikasgn2
+        # - name: Run tests
+        #   run: npm test
+
+        - name: Build project
+          run: npm run build
+          working-directory: ./jaivikasgn2
