--- a/.github/workflows/cijaivik.yaml
+++ b/.github/workflows/cijaivik.yaml
@@ -21,10 +21,10 @@
           run: npm install
           working-directory: ./jaivikasgn2
 
-        # - name: Run tests
-        #   run: npm test
-        #   working-directory: ./jaivikasgn2
+        - name: Run tests
+          run: npm test
+          working-directory: ./jaivikasgn2
 
         - name: Build project
           run: npm run build
-          # working-directory: ./jaivikasgn2
+          working-directory: ./jaivikasgn2
